--- a/gift.html
+++ b/gift.html
@@ -11,9 +11,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/gift-style.css">
+    <link rel="stylesheet" href="assets/css/media-query.css">
     <style>
-        #loading-screen {
+        .center-of-the-display {
             display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        .loader-screen {
+            display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100%;
@@ -21,49 +30,135 @@
             position: fixed;
             top: 0;
             left: 0;
-            background-color: #fff;
-            /* Background color of the loading screen */
+            /* background-color: #fff; */
+            background-color: black;
             color: #000;
-            /* Text color of the loading screen */
             font-size: 2em;
             z-index: 9999;
-            /* Ensure the loading screen is on top */
+            transition: opacity 1s ease-in-out, visibility 1s;
+            opacity: 1;
+            visibility: visible;
+
+        }
+
+        .loader-ring-main {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            animation: loaderRingAnimation 2s linear infinite;
+        }
+
+        .loader-ring-main::before {
+            position: absolute;
+            content: '';
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 100%;
+            border-radius: 50%;
+            box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
+        }
+
+        .loader-ring-text {
+            color: #737373;
+            font-size: 20px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            line-height: 200px;
+            animation: loaderRingText 2s ease-in-out infinite;
+        }
+
+        @keyframes loaderRingAnimation {
+            0% {
+                transform: rotate(0deg);
+                box-shadow: 1px 5px 2px #e65c00;
+            }
+
+            50% {
+                transform: rotate(180deg);
+                box-shadow: 1px 5px 2px #18b201;
+            }
+
+            100% {
+                transform: rotate(360deg);
+                box-shadow: 1px 5px 2px #0456c8;
+            }
+        }
+
+        @keyframes loaderRingText {
+            0% {
+                color: transparent;
+            }
+
+            50% {
+                color: white;
+            }
+
+            100% {
+                color: transparent;
+            }
+        }
+
+        #loaderProgressBarBody {
+            position: relative;
+            /* width: 300px; */
+            height: 50px;
+            background-color: #ffffff;
+            /* border: 5px solid #00ff51; */
+            border-radius: 25px;
+            overflow: hidden;
             transition: opacity 1s ease-in-out, visibility 1s;
             opacity: 1;
             visibility: visible;
         }
 
-        #main-content {
-            opacity: 0;
-            /* Initially hidden */
-            visibility: hidden;
-            transition: opacity 1s ease-in-out, visibility 1s;
+        #loaderProgressBarMain {
+            height: 100%;
+            width: 0;
+            background-color: #00ff51;
+            transition: width 0.1s;
         }
 
-        .box {
-            width: 75%;
-            height: auto;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+        #loaderProgressBarText {
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+            font-size: 18px;
+            color: black;
+        }
+
+        #mainContent {
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 1s ease-in-out, visibility 1s;
         }
     </style>
 </head>
 
 <body>
 
-    <div class="" id="loading-screen">
-        <div class="box p-5">
-            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
-                aria-valuemin="0" aria-valuemax="100" style="height: 2.5vh;">
-                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+    <!-- Loading... -->
+    <div class="loader-screen" id="loaderScreen">
+        <section class="center-of-the-display">
+            <div class="loader-ring-main"></div>
+            <span class="loader-ring-text">Loading...</span>
+        </section>
+
+
+        <section class="center-of-the-display my-5">
+            <div id="loaderProgressBarBody">
+                <div id="loaderProgressBarMain"></div>
+                <div id="loaderProgressBarText">0%</div>
             </div>
-            <h3 class="text-center m-0 mt-3">Loading...</h3>
-        </div>
+        </section>
     </div>
 
     <div class="main-section my-5 py-5 mx-1 mx-md-5 px-0 px-md-5 bg-body rounded-4 
-        position-relative" id="main-content">
+        position-relative" id="mainContent">
         <div class="gift-title-body">
             <h1 class="d-flex justify-content-center gift-title-text">Happy Birthday</h1>
             <h2 class="d-flex justify-content-center gift-title">
@@ -129,18 +224,47 @@
     <script>
 
         window.addEventListener('load', function () {
-            // Hide the loading screen
-            const loadingScreen = document.getElementById('loading-screen');
-            loadingScreen.style.opacity = '0';
-            loadingScreen.style.visibility = 'hidden';
+            
+            const loaderProgressBarBody = document.getElementById('loaderProgressBarBody');
+            const loaderProgressBarMain = document.getElementById('loaderProgressBarMain');
+            const loaderProgressBarText = document.getElementById('loaderProgressBarText');
+            const loadingScreen = document.getElementById('loaderScreen');
+            const mainContent = document.getElementById('mainContent');
+            let progress = 10;
 
-            // Show the main content
-            const mainContent = document.getElementById('main-content');
-            mainContent.style.opacity = '1';
-            mainContent.style.visibility = 'visible';
+            function updateLoader() {
+                progress += 1;
+                loaderProgressBarMain.style.width = progress + '%';
+                loaderProgressBarText.innerText = progress + '%';
 
-            // Allow scrolling after loading
-            document.body.style.overflow = 'auto';
+                if (progress < 100) {
+                    requestAnimationFrame(updateLoader);
+                } else {
+                    setTimeout(() => {
+
+                        // hide loader sereen
+                        loadingScreen.style.opacity = '0';
+                        loadingScreen.style.visibility = 'hidden';
+                        loadingScreen.style.zIndex = '-1';
+
+                        // show content
+                        mainContent.style.opacity = '1';
+                        mainContent.style.visibility = 'visible';
+
+                        // Allow scrolling after loading
+                        document.body.style.overflow = 'auto';
+
+                    }, 1000); // Add a slight delay before showing the content
+                }
+            }
+
+            // Simulate loading progress
+            requestAnimationFrame(updateLoader);
+
+
+
+
+
 
             // notification
             // ***************************************************
